# gemini-enterprise-adk-mcp-auth

./: .gcloudignore  .gitignore  README.md  pyproject.toml
1_cloud_run/: .env.example  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  pyproject.toml  test_mcp_client.py
1_cloud_run/src/: main.py  pyproject.toml
2_agent/: .env.example  pyproject.toml  setup.sh
2_agent/agent/: agent.py  patch_adk.py  requirements.txt
2_agent/local/: agent.py
2_agent/local_user_auth/: agent.py
2_agents/: setup_iam.sh
2_agents/adk_web_agent/: .env.example  pyproject.toml
2_agents/adk_web_agent/agent/: agent.py
old/1_cloud_run/: README.md  pyproject.toml
old/1_cloud_run/src/: auth.py
old/2_agent/: .env.example
old/2_agent/agent/: patch_adk.py
old/2_agent/local/: agent.py
scenario_1/: README.md
scenario_1/1_cloud_run/: .env.example  cloudbuild.yaml  deploy.sh  pyproject.toml
scenario_1/2_agents/: .env.example  pyproject.toml  setup.sh
scenario_1/2_agents/agent_engine/: agent.py  deploy.py  register_to_ge.py
scenario_1/2_agents/agent_engine_tmp20260301_171357/: agent.py
scenario_1/2_agents/local/: agent.py
scenario_2/: README.md
scenario_2/1_cloud_run/: .env.example  Dockerfile  cloudbuild.yaml  deploy.sh  pyproject.toml
scenario_2/1_cloud_run/src/: main.py
scenario_2/2_agents/: .env.example  agent.py  pyproject.toml
scenario_2/2_agents/agent_engine/: agent.py  create_auth_id.py  register_to_ge.py
scenario_2/2_agents/agent_engine_tmp20260303_000804/: agent.py  create_auth_id.py  register_to_ge.py  requirements.txt
(+1 files in other folders)
