[project]
name = "gemini-enterprise-adk-mcp-auth"
version = "0.1.0"
description = """
    An example deployment of an MCP server hosted on Google Cloud Run and accompanying
    ADK agent examples for running locally and on Gemini Enterprise.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "google-adk>=1.23.0",
    "google-auth>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["1_cloud_run", "2_agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"