[project]
name = "user-info-mcp-server"
version = "0.1.0"
description = "A Fast MCP server hosted on Cloud Run that returns an end user's information using their Google Account"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp==2.13.1",
    "google-adk>=1.23.0",
    "python-dotenv>=1.0.0",
    "google-auth",
    "requests"
]